--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <form class="modal__form" action="mail.php" method="POST">
             <input type="text" name="name" placeholder="Имя" required />
             <input
-              type="text"
+              type="tel"
               name="phone"
               placeholder="Номер телефона"
               required
@@ -267,6 +267,7 @@
       </div>
     </footer>
 
+    <script src="inputmask.min.js"></script>
     <script src="script.js"></script>
     <script src="slider.js"></script>
   </body>
