--- a/uz.html
+++ b/uz.html
@@ -26,7 +26,7 @@
           <form class="modal__form" action="mail.php" method="POST">
             <input type="text" name="name" placeholder="Ism" required />
             <input
-              type="text"
+              type="tel"
               name="phone"
               placeholder="Telefon raqami"
               required
@@ -270,7 +270,7 @@
       </div>
     </footer>
 
-    <!-- <script src="app.js"></script> -->
+    <script src="inputmask.min.js"></script>
     <script src="script.js"></script>
     <script src="slider.js"></script>
   </body>
