--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="modal__content">
           <h2>Оставатьте заявку и мы скоро свяжемся с вами</h2>
           <div class="modal__close">X</div>
-          <form class="modal__form" action="mail.php" method="POST">
+          <form class="modal__form" action="telegram.php" method="POST">
             <input type="text" name="name" placeholder="Имя" required />
             <input
               type="tel"
