--- a/uz.html
+++ b/uz.html
@@ -23,7 +23,7 @@
         <div class="modal__content">
           <h2>Arizani to'ldiring va biz tiz bilan tez orada bog'lanamiz.</h2>
           <div class="modal__close">X</div>
-          <form class="modal__form" action="mail.php" method="POST">
+          <form class="modal__form" action="telegram.php" method="POST">
             <input type="text" name="name" placeholder="Ism" required />
             <input
               type="tel"
